--- a/yu-ai-code-mother-frontend/index.html
+++ b/yu-ai-code-mother-frontend/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <link href="/favicon.ico" rel="icon">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>AI 零代码应用生成平台</title>
-</head>
-<body>
-<div id="app"></div>
-<script src="/src/main.ts" type="module"></script>
-</body>
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>鱼皮 AI 零代码应用生成平台</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
